# clipboard_sync_cli

./: Cargo.toml  LICENSE  README.md  build.rs
proto/clipboard/v1/: sync.proto
src/: client.rs  clipboard.rs  main.rs  rpc_server.rs  server.rs
