[package]
name = "clipboard_sync_cli"
version = "0.3.1"
description = "Synchronizing the clipboard among multiple machines"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.6", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
image = "0.25"
log = "0.4"
open = "5.3"
qrcode = "0.14.1"
rqrr = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tokio-macros = "2.7.0"
url = "2.5.0"
service-manager = "0.11"
tonic = "0.14.6"
prost = "0.14.4"
thiserror = "2.0.18"
tonic-prost = "0.14.6"
flate2 = "1.1.9"
uuid = { version = "1.23.4", features = ["v4"] }
tokio-stream = "0.1.18"

[target.'cfg(target_os = "windows")'.dependencies]
xcap = "0.9.6"

[build-dependencies]
tonic-prost-build = "0.14.6"
